--- a/views/dashboard.html.erb
+++ b/views/dashboard.html.erb
@@ -4,7 +4,16 @@
 <h2>ポリシー</h2>
 <div class="list-group">
 <% AndroidManagementApi.call("GET /enterprises/#{current_enterprise.name}/policies")['policies']&.each do |policy| %>
-<a href="/<%= policy['name'] %>" class="list-group-item list-group-item-action"><%= policy['name'].split("/").last %></a>
+  <a href="/<%= policy['name'] %>" class="list-group-item list-group-item-action"><%= policy['name'].split("/").last %></a>
 <% end %>
 <a href="/enterprises/<%= current_enterprise.name %>/policies/new" class="list-group-item list-group-item-action">新規作成</a>
 </div>
+
+<% if (devices = AndroidManagementApi.call("GET /enterprises/#{current_enterprise.name}/devices")['devices']).present? %>
+<h2>デバイス</h2>
+<div class="list-group">
+<% devices.each do |device| %>
+  <a href="/<%= device['name'] %>" class="list-group-item list-group-item-action"><%= device['name'].split('/').last %></a>
+<% end %>
+</div>
+<% end %>
