--- a/views/device_show_policy.html.erb
+++ b/views/device_show_policy.html.erb
@@ -7,7 +7,7 @@
 <h2>ポリシーの変更</h2>
 クリックしたら即反映されます。
 <form class="list-group" method="post">
-<% AndroidManagementApi.call("GET /enterprises/#{current_enterprise.name}/policies")['policies']&.each do |policy| %>
+<% @policies.each do |policy| %>
   <button name="policy_name" value="<%= policy['name'] %>" class="list-group-item list-group-item-action"><%= policy['name'].split("/").last %></button>
 <% end %>
 </form>
