Replace Google Chart API with SCV

--- a/views/qrcode.html.erb
+++ b/views/qrcode.html.erb
@@ -1,20 +1,19 @@
 <div class="card-group">
 <% %w[PERSONAL_USAGE_ALLOWED PERSONAL_USAGE_DISALLOWED].each do |allow_personal_usage_value| %>
 <div class="card">
-  <img src="<%=
+  <div class="card-img-top">
+  <%=
   payload = {
     'policyName' => @policy_name,
     'allowPersonalUsage' => allow_personal_usage_value,
   }
   enrollment_token = AndroidManagementApi.call("POST /enterprises/#{params[:enterprise_name]}/enrollmentTokens", payload: payload)
-  chart_uri = URI('https://chart.googleapis.com/chart')
-  chart_uri.query = URI.encode_www_form({
-    cht: 'qr',
-    chs: '500x500',
-    chl: enrollment_token['qrCode'],
-  })
-  chart_uri
-  %>" class="card-img-top"/>
+  RQRCode::QRCode.new(enrollment_token['qrCode']).as_svg(
+    module_size: 4,
+    use_path: true,
+  )
+  %>
+  </div>
   <div class="card-body">
     <h5 class="card-title"><%= allow_personal_usage_value %>のQRコード</h5>
     <p class="card-text">ポリシーは<%= @policy_name.split("/").last %></p>
